@@ -3,10 +3,12 @@
 class ConsoleIndexManagerController extends ConsoleManagerController{
     
     function process(array $scriptProperties = array()) {
+
+        #add js
+        $this->addJavascript($this->config['manager_url'].'js/widgets/console.panel.js');
+        $this->addJavascript($this->config['manager_url'].'js/sections/home.js');
+
         $this->modx->invokeEvent('OnSnipFormPrerender');
-        return array(
-            "config" => $this->modx->toJSON($this->config),
-        );
     }
     
     function getTemplateFile() {
