@@ -2,4 +2,6 @@
 
 $_lang['console'] = 'Console';
 $_lang['console_desc'] = 'Console for execution php-code';
+$_lang['console_tab'] = 'PHP Codeeditor';
+$_lang['console.exec'] = 'Execute';
 
